# pg_arrow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
RESEARCH/: Notes.md  WAL_FORMAT.md
benches/: BENCHMARKS.md  criterion_bench.rs  file_read_latency.rs  iai_bench.rs  simd_utf8.rs
benches/common/: mod.rs
docs/: CONTEXT_HISTORY.md  PROFILING_AND_DEBUGGING.md
docs/design/: DESIGN.md
examples/: table_reader.rs
scripts/: pgbackrest-backup.sh  setup-postgres.sh
src/: lib.rs
src/codec/: mod.rs
src/file/: error.rs  mod.rs  reader.rs  relation.rs
src/heap/: mod.rs  page.rs  snapshot.rs  tuple.rs
src/table/: mod.rs
src/types/: arrow.rs  catalog.rs  codec.rs  column.rs  mod.rs  pg_type.rs  schema.rs
src/util/: mod.rs
