[package]
name = "pg_arrow"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
derive-where = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
arrow = "58.0.0"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
futures = "0.3"
libc = "0.2"
bytes = "1"

[dev-dependencies]
criterion = "0.8"
iai = "0.1"
pg-test-harness = { path = "../utilities/pg-test-harness" }

[[bench]]
name = "criterion_bench"
harness = false

[[bench]]
name = "iai_bench"
harness = false

[[bench]]
name = "file_read_latency"
harness = false

[[example]]
name = "table_reader"
